# service-platform-showcase

./: .gitignore  README.md  package-lock.json  package.json
backend-example/: README.md  pyproject.toml
backend-example/app/: main.py
backend-example/app/api/routes/: categories.py  service_requests.py
backend-example/app/core/: config.py
backend-example/app/crud/: category.py  service_request.py
backend-example/app/db/: base.py
backend-example/app/models/: category.py  service_request.py
backend-example/app/schemas/: category.py  service_request.py
docs/: portfolio-architecture.md
src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
src/app/about/: page.tsx
src/app/api/contact/: route.ts
src/app/api/request/: route.ts
src/app/features/: page.tsx
src/app/privacy-policy/: page.tsx
src/app/request/: page.tsx
src/app/terms-of-service/: page.tsx
src/components/: analytics-placeholder.tsx  brand-mark.tsx  footer.tsx  header.tsx  page-hero.tsx  route-scroll-reset.tsx
src/components/forms/: contact-form.tsx  field.tsx  request-form.tsx
src/lib/: lead-delivery.ts  metadata.ts  site.ts  storage.ts  validation.ts
