[project]
name = "service-platform-api-demo"
version = "0.1.0"
description = "Portfolio-safe FastAPI backend example for a generic service platform project"
requires-python = ">=3.11"
dependencies = [
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.118.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "uvicorn[standard]>=0.37.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
